--- a/project/swarm.yml
+++ b/project/swarm.yml
@@ -2,6 +2,18 @@ version: '3'
 
 services:
 
+  caddy:
+    image: m3kong/micro-caddy:1.0.0
+    deploy:
+      mode: replicated
+      replicas: 1
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - caddy_data:/data
+      - caddy_config:/config
+
   front-end:
     image: m3kong/front-end:1.0.0
     deploy:
@@ -36,7 +48,6 @@ services:
 
   mailer-service:
     image: m3kong/mail-service:1.0.0
-    restart: always
     deploy:
       mode: replicated
       replicas: 1
@@ -90,3 +101,9 @@ services:
       POSTGRES_DB: users
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
+
+
+volumes:
+  caddy_data:
+    external: true
+  caddy_config:
