--- a/project/swarm.yml
+++ b/project/swarm.yml
@@ -15,10 +15,12 @@ services:
       - caddy_config:/config
 
   front-end:
-    image: m3kong/front-end:1.0.0
+    image: m3kong/front-end:1.0.1
     deploy:
       mode: replicated
       replicas: 1
+    environment:
+      BROKER_URL: "http://backend"
 
   broker-service:
     image: m3kong/broker-service:1.0.1
